server/Article schema add contentText
