# server/swagger-output.json
@@ -41,6 +41,10 @@
                   "type": "string",
                   "example": "測試文章"
                 },
+                "contentText": {
+                  "type": "string",
+                  "example": "證券分析師張陳浩表示，資服股在去年曾出現一波漲勢，主要是由美國的資安大廠股價創高所帶動，加上AI的發展趨勢上，相關的資安問題更加重要，DeepSeek所帶來的想像題材將比先前的AI發展所帶動的資安商機更多"
+                },
                 "content": {
                   "type": "object",
                   "properties": {
@@ -383,69 +387,31 @@
             "type": "string"
           },
           {
-            "name": "obj",
+            "name": "body",
             "in": "body",
-            "description": "修改文章.",
-            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "title": {
-                  "type": "string",
-                  "example": "已修改文章"
+                  "example": "any"
                 },
                 "content": {
-                  "type": "object",
-                  "properties": {
-                    "type": {
-                      "type": "string",
-                      "example": "doc"
-                    },
-                    "content": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "paragraph"
-                          },
-                          "content": {
-                            "type": "array",
-                            "items": {
-                              "type": "object",
-                              "properties": {
-                                "type": {
-                                  "type": "string",
-                                  "example": "text"
-                                },
-                                "text": {
-                                  "type": "string",
-                                  "example": "證券分析師張陳浩表示，資服股在去年曾出現一波漲勢，主要是由美國的資安大廠股價創高所帶動，加上AI的發展趨勢上，相關的資安問題更加重要，DeepSeek所帶來的想像題材將比先前的AI發展所帶動的資安商機更多。"
-                                }
-                              }
-                            }
-                          }
-                        }
-                      }
-                    }
-                  }
-                },
-                "description": {
-                  "type": "string",
-                  "example": "修改過了"
+                  "example": "any"
                 },
                 "category": {
-                  "type": "string",
-                  "example": "Life"
-                },
-                "status": {
-                  "type": "string",
-                  "example": "draft"
+                  "example": "any"
                 },
                 "slug": {
-                  "type": "string",
-                  "example": "change1"
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "status": {
+                  "example": "any"
+                },
+                "contentText": {
+                  "example": "any"
                 }
               }
             }
